<resources>
    <string name="app_name">ppiyongppiyongApp</string>
    <string name="Kotlin">Kotlin</string>
    <string name="login">로그인</string>
    <string name="back_desc">뒤로가기</string>
    <string name="join">회원가입</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="pwchk">비밀번호 확인</string>
    <string name="email">이메일</string>
    <string name="phone">휴대폰 번호</string>
    <string name="birth">생년월일</string>
    <string name="nextstep">다음단계</string>
    <string name="name">이름</string>
    <string name="disease">병명</string>
    <string name="selinfo">선택정보</string>
    <string name="view">표시</string>
    <string name="add">추가</string>
    <string name="del">삭제</string>
    <string name="image_desc">이미지</string>
    <string name="idpw_find">아이디/비밀번호 찾기</string>
    <string name="id_find">아이디 찾기</string>
    <string name="pw_find">비밀번호 찾기</string>
    <string name="join_welcome">~~~님, \n회원가입을 환영합니다</string>
    <string name="join_info1">세부정보를 업데이트 하셔야\n편리하게 이용할 수 있습니다.</string>
    <string name="join_info2">세부정보를 업데이트 하러 가시겠습니까?</string>
    <string name="info_update">세부정보 업데이트</string>
    <string name="next_update">다음에 수정하기</string>
    <string name="email_exam">xxxx@xxx.xxx</string>
    <string name="phone_exam">000-0000-0000</string>
    <string name="term_txt1">이용약관</string>
    <string name="term_txt2">과 </string>
    <string name="term_txt3">개인정보취급방침</string>
    <string name="term_txt4">에 동의합니다.</string>
    <string name="member_modify">회원정보 수정</string>
    <string name="modify">수정</string>
    <string name="medichine">먹는 약</string>
    <string name="weight">체중</string>
    <string name="hospital">다니는 병원</string>
    <string name="contact">연락처</string>
    <string name="setting_desc">설정</string>
    <string name="now_pw">현재 비밀번호</string>
    <string name="new_pw">새 비밀번호</string>
    <string name="my_position">내 위치</string>
    <string name="report">신고하기</string>
</resources>
