<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".JoinOk">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/wrap">
            <include
                    layout="@layout/header"
                    android:id="@+id/header"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
            />
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/header"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/constraintLayout"
                    app:layout_constraintBottom_toBottomOf="parent">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical" android:id="@+id/linearLayout4"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="20dp" android:layout_height="wrap_content">
                    <TextView
                            android:text="@string/join_welcome"
                            android:textSize="30sp"
                            android:textStyle="bold"
                            android:paddingBottom="10dp"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/txtJoinWelcome"/>
                    <TextView
                            android:text="@string/join_info1"
                            android:textSize="20sp"
                            android:paddingBottom="3dp"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/txtJoinInfo"
                            app:layout_constraintTop_toBottomOf="@id/txtJoinWelcome"/>
                    <TextView
                            android:text="@string/join_info2"
                            android:textSize="20sp"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    <Button
                            android:text="@string/info_update"
                            style="@style/basic_btn"
                            android:id="@+id/btnProfile" android:background="@color/colorAccent"
                            app:layout_constraintTop_toBottomOf="@+id/txtPw" />
                    <Button
                            android:text="@string/next_update"
                            style="@style/basic_btn"
                            android:id="@+id/btnHome" android:background="@color/colorPrimaryDark"
                            app:layout_constraintTop_toBottomOf="@+id/txtPw" />
                </LinearLayout>
            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>