<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Join">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/wrap">
            <include
                    layout="@layout/header"
                    android:id="@+id/header"/>
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/header"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/constraintLayout">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        style="@style/join_list"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:id="@+id/joinList1" app:layout_constraintTop_toTopOf="parent">
                    <TextView
                            style="@style/join_list_tit"
                            android:text="@string/name"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>
                    <EditText
                            style="@style/join_list_edit"
                            android:hint="@string/name"
                            android:ems="255"
                            android:id="@+id/txtName"
                            android:inputType="text"
                            android:importantForAutofill="no" tools:targetApi="o"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        style="@style/join_list"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:id="@+id/joinList2" app:layout_constraintTop_toBottomOf="@+id/joinList1">
                    <TextView
                            style="@style/join_list_tit"
                            android:text="@string/email"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        <EditText
                                style="@style/join_list_edit"
                                android:hint="@string/email_exam"
                                android:ems="255"
                                android:id="@+id/txtEmail"
                                android:inputType="textEmailAddress"
                                android:importantForAutofill="no" tools:targetApi="o"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        style="@style/join_list"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:id="@+id/joinList3" app:layout_constraintTop_toBottomOf="@+id/joinList2">
                    <TextView
                            style="@style/join_list_tit"
                            android:text="@string/phone"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        <EditText
                                style="@style/join_list_edit"
                                android:hint="@string/phone_exam"
                                android:ems="255"
                                android:id="@+id/txtPhone"
                                android:inputType="phone"
                                android:importantForAutofill="no" tools:targetApi="o"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        style="@style/join_list"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:id="@+id/joinList4" app:layout_constraintTop_toBottomOf="@+id/joinList3">
                    <TextView
                            style="@style/join_list_tit"
                            android:text="@string/birth"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        <EditText
                                style="@style/join_list_edit"
                                android:hint="@string/birth"
                                android:ems="20"
                                android:id="@+id/txtBirth"
                                android:inputType="date"
                                android:importantForAutofill="no" tools:targetApi="o"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.constraint.ConstraintLayout>

            <Button
                    android:text="@string/modify"
                    style="@style/bottom_btn"
                    android:background="@color/colorMain"
                    android:id="@+id/btnSubmit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>