<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PW_change" android:id="@+id/constraintLayout2">
    <include layout="@layout/header" android:id="@+id/header"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/header">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/constraintLayout"
                app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/join_list"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" android:id="@+id/joinList1"
                    app:layout_constraintHorizontal_bias="0.0">
                <TextView
                        style="@style/join_list_tit"
                        android:text="@string/now_pw"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>
                <EditText
                        style="@style/join_list_edit"
                        android:hint="@string/now_pw"
                        android:ems="255"
                        android:id="@+id/txtNowPw"
                        android:inputType="textPassword"
                        android:importantForAutofill="no" tools:targetApi="o"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/join_list"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/joinList2"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/joinList1">
                <TextView
                        style="@style/join_list_tit"
                        android:text="@string/new_pw"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>
                <EditText
                        style="@style/join_list_edit"
                        android:hint="@string/new_pw"
                        android:ems="255"
                        android:id="@+id/txtNewPw"
                        android:inputType="textPassword"
                        android:importantForAutofill="no" tools:targetApi="o"/>
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
    <Button
            android:text="@string/modify"
            style="@style/bottom_btn"
            android:id="@+id/btnSubmit"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>