<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MemberModify">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/wrap">
            <include layout="@layout/header" android:id="@+id/header"/>
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/header"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/constraintLayout">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        style="@style/join_list"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:id="@+id/joinList1"
                        app:layout_constraintTop_toTopOf="parent">
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        <TextView
                                style="@style/join_list_tit"
                                android:text="@string/disease"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="parent"/>
                        <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" android:gravity="end|center_vertical">
                            <Button style="@style/small_btn"
                                    android:text="@string/add"
                                    android:background="@color/colorAccent" />
                            <Button style="@style/small_btn"
                                    android:text="@string/del"
                                    android:background="@color/colorBlack" />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        <EditText
                                style="@style/join_list_edit"
                                android:hint="@string/disease"
                                android:ems="3"
                                android:id="@+id/txtDisease1"
                                android:inputType="text"
                                android:layout_width="300dp"
                                android:importantForAutofill="no" tools:targetApi="o"/>
                        <CheckBox
                                android:text="@string/view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/chkDiseaseView1"
                                android:checked="true"
                                android:gravity="center|center_vertical"/>
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        <EditText
                                style="@style/join_list_edit"
                                android:hint="@string/disease"
                                android:ems="3"
                                android:id="@+id/txtDisease2"
                                android:inputType="text"
                                android:layout_width="300dp"
                                android:importantForAutofill="no" tools:targetApi="o"/>
                        <CheckBox
                                android:text="@string/view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/chkDiseaseView2"
                                android:checked="true"
                                android:gravity="center|center_vertical"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        style="@style/join_list"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:id="@+id/joinList2"
                        app:layout_constraintTop_toBottomOf="@id/joinList1">
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        <TextView
                                style="@style/join_list_tit"
                                android:text="@string/medichine"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="parent"/>
                        <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" android:gravity="end|center_vertical">
                            <Button style="@style/small_btn"
                                    android:text="@string/add"
                                    android:background="@color/colorAccent"/>
                            <Button style="@style/small_btn"
                                    android:text="@string/del"
                                    android:background="@color/colorBlack"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        <EditText
                                style="@style/join_list_edit"
                                android:hint="@string/medichine"
                                android:ems="3"
                                android:id="@+id/txtMedichine1"
                                android:inputType="text"
                                android:layout_width="300dp"
                                android:importantForAutofill="no" tools:targetApi="o"/>
                        <CheckBox
                                android:text="@string/view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/chkMedichineView1"
                                android:checked="true"
                                android:gravity="center|center_vertical"/>
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        <EditText
                                style="@style/join_list_edit"
                                android:hint="@string/medichine"
                                android:ems="3"
                                android:id="@+id/txtMedichine2"
                                android:inputType="text"
                                android:layout_width="300dp"
                                android:importantForAutofill="no" tools:targetApi="o"/>
                        <CheckBox
                                android:text="@string/view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/chkMedichineView2"
                                android:checked="true"
                                android:gravity="center|center_vertical"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        style="@style/join_list"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:id="@+id/joinList3" app:layout_constraintTop_toBottomOf="@+id/joinList2"
                        android:layout_marginTop="8dp">
                    <TextView
                            style="@style/join_list_tit"
                            android:text="@string/weight"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        <EditText
                                style="@style/join_list_edit"
                                android:hint="@string/weight"
                                android:ems="255"
                                android:id="@+id/user_Weight"
                                android:inputType="number"
                                android:layout_width="300dp"
                                android:importantForAutofill="no" tools:targetApi="o"/>
                        <CheckBox
                                android:text="@string/view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/user_Weight_view"
                                android:checked="true"
                                android:gravity="center|center_vertical"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        style="@style/join_list"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:id="@+id/joinList4"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/joinList3">
                    <TextView
                            style="@style/join_list_tit"
                            android:text="@string/hospital"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        <EditText
                                style="@style/join_list_edit"
                                android:hint="@string/hospital"
                                android:ems="255"
                                android:id="@+id/user_Hospital"
                                android:inputType="text"
                                android:layout_width="300dp"
                                android:importantForAutofill="no" tools:targetApi="o"/>
                        <CheckBox
                                android:text="@string/view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/user_Hospital_view"
                                android:checked="true"
                                android:gravity="center|center_vertical"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        style="@style/join_list"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:id="@+id/joinList5" app:layout_constraintTop_toBottomOf="@+id/joinList4">
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        <TextView
                                style="@style/join_list_tit"
                                android:text="@string/contact"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="parent"/>
                        <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" android:gravity="end|center_vertical">
                            <Button style="@style/small_btn"
                                    android:background="@color/colorMain"
                                    android:text="@string/add"/>
                            <Button style="@style/small_btn"
                                    android:text="@string/del"
                                    android:background="@color/colorBlack"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        <EditText
                                style="@style/join_list_edit"
                                android:hint="@string/phone_exam"
                                android:ems="20"
                                android:id="@+id/txtContact1"
                                android:inputType="phone"
                                android:layout_width="300dp"
                                android:importantForAutofill="no" tools:targetApi="o"/>
                        <CheckBox
                                android:text="@string/view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/chkContact1View"
                                android:checked="true"
                                android:gravity="center|center_vertical"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.constraint.ConstraintLayout>
            <Button
                    android:text="@string/modify"
                    style="@style/bottom_btn"
                    android:id="@+id/btnSubmit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout"/>
        </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>